--- a/Task7_AmazonPrime/Base.lproj/Main.storyboard
+++ b/Task7_AmazonPrime/Base.lproj/Main.storyboard
@@ -206,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1070" y="-546"/>
+            <point key="canvasLocation" x="849" y="-542"/>
         </scene>
         <!--Find-->
         <scene sceneID="9l3-zg-OLJ">
@@ -222,7 +222,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i5Y-jx-RIG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1068" y="350"/>
+            <point key="canvasLocation" x="846" y="425"/>
+        </scene>
+        <!--My Stuff-->
+        <scene sceneID="pv3-vM-CEr">
+            <objects>
+                <viewController id="31V-of-Gt9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xCT-fm-LVN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="9NZ-es-M1u"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="My Stuff" image="MyStuff" id="Pwy-Ox-LdE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zgf-5C-Fpk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1941" y="319"/>
         </scene>
         <!--Downloads-->
         <scene sceneID="bkr-pc-5Za">
@@ -238,11 +254,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5GR-xP-oI3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1955" y="-77"/>
+            <point key="canvasLocation" x="1941" y="-434"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4k1-OM-Bh1">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zcM-Gf-zUm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="TNr-jO-9bg" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Uhk-u2-tvh">
@@ -253,14 +270,15 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lQt-do-PwW"/>
                         <segue destination="GJf-CS-u3z" kind="relationship" relationship="viewControllers" id="38B-JA-tQV"/>
                         <segue destination="Gj2-Rz-UcB" kind="relationship" relationship="viewControllers" id="5tf-O8-1R8"/>
+                        <segue destination="31V-of-Gt9" kind="relationship" relationship="viewControllers" id="fNf-N6-gX0"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zcM-Gf-zUm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-37.681159420289859" y="-127.23214285714285"/>
         </scene>
     </scenes>
     <resources>
+        <image name="MyStuff" width="24" height="24"/>
         <image name="home" width="24" height="22"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="prime" width="1208" height="371"/>
